Bug fix: spacing for project cards

--- a/src/components/Projects/projects.module.scss
+++ b/src/components/Projects/projects.module.scss
@@ -1,4 +1,5 @@
 .projectsContainer {
   width: 100%;
   min-height: 100vh;
+  margin-top: 10px;
 }
